# ckanext-alisea

./: MANIFEST.in  README.md  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/alisea/: alisea_dataset_schema.yaml  alisea_dataset_schema_03.yaml  alisea_dataset_schema_04.yaml  alisea_dataset_schema_nt.yaml  alisea_dataset_schema_nt02.yaml  alisea_dataset_schema_with_th.yaml  helpers.py  licences.json  plugin.py
ckanext/alisea/assets/: script.js  webassets.yml
ckanext/alisea/assets/css/: alisea.css
ckanext/alisea/i18n/: ckanext-alisea.pot
ckanext/alisea/i18n/fr/LC_MESSAGES/: ckanext-alisea.mo  ckanext-alisea.po
ckanext/alisea/i18n/km/LC_MESSAGES/: ckanext-alisea.mo  ckanext-alisea.po
ckanext/alisea/i18n/lo/LC_MESSAGES/: ckanext-alisea.mo  ckanext-alisea.po
ckanext/alisea/i18n/my_MM/LC_MESSAGES/: ckanext-alisea.mo  ckanext-alisea.po
ckanext/alisea/i18n/th/LC_MESSAGES/: ckanext-alisea.mo  ckanext-alisea.po
ckanext/alisea/i18n/vi/LC_MESSAGES/: ckanext-alisea.mo  ckanext-alisea.po
ckanext/alisea/templates/: base.html  footer.html  header.html  page.html
ckanext/alisea/templates/admin/: config.html
ckanext/alisea/templates/organization/: index.html
ckanext/alisea/templates/package/: search.html
ckanext/alisea/templates/package/snippets/: info.html
ckanext/alisea/templates/scheming/form_snippets/: adl1.html  adl2.html  administrative_level1.html  administrative_level2.html  agroecology_keyword.html  custom.html  custom2.html  date_year.html
ckanext/alisea/templates/snippets/: facet_list.html  footer_left.html  footer_right.html  gtm.html  language_selector.html  package_item.html  search_form.html  social.html
ckanext/alisea/tests/: test_plugin.py
config/solr/: managed-schema
