[metadata]
name = ckanext-alisea
version = 0.0.1
description = Main theme for Alisea Knowledge Hub
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/keitaroinc/ckanext-alisea
author = Filip Mitrovski
author_email = filip.mitrovski@keitaro.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN Alisea

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             alisea = ckanext.alisea.plugin:AliseaPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/alisea/i18n/ckanext-alisea.pot
width = 80

[init_catalog]
domain = ckanext-alisea
input_file = ckanext/alisea/i18n/ckanext-alisea.pot
output_dir = ckanext/alisea/i18n

[update_catalog]
domain = ckanext-alisea
input_file = ckanext/alisea/i18n/ckanext-alisea.pot
output_dir = ckanext/alisea/i18n
previous = true

[compile_catalog]
domain = ckanext-alisea
directory = ckanext/alisea/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
